--- a/src/styles/partials/blocks/_mailchimp-form.scss
+++ b/src/styles/partials/blocks/_mailchimp-form.scss
@@ -65,7 +65,7 @@
 
 		&__action {
 			position: absolute;
-			inset-block-end: 0;
+			inset-block-start: 0;
 			inset-inline-end: 0;
 			z-index: 1;
 			display: flex;
